[package]
name = "meetup_facade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "meetup_facade"


[dependencies]
actix-web = "4.0"
anyhow = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
listenfd = "0.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }

#Tracing Libs
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread", ] }
opentelemetry-stackdriver = { version = "0.14.0", features = ["gcp_auth"] }
tracing-opentelemetry = { version = "0.17" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.5"